# thunderroll

./: .env.example  .gitignore  CI_CD_PLAN.md  COMANDOS_RAPIDOS.md  GUIA_INSTALACION_MANUAL.md  Makefile  README.md  claude.md  docker-compose.override.yml  docker-compose.yml  render.yaml  reset_db.sh  start.sh  status.sh  test.sh
backend/: .env  Dockerfile  alembic.ini  datos_ejemplo_inventario.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  api.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  catalogs.py  imports.py  reports.py  (+3 more)
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/app/database/: database.py  seed.py  seed_equivalences.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  location.py  models.py  sale.py  schemas.py  shipment.py  transfer.py  unit.py  unit_event.py  user.py
backend/app/repositories/: location_repository.py  transfer_repository.py  unit_repository.py  user_repository.py
backend/app/routers/: auth.py  imports.py  locations.py  reports.py  settings.py  transfers.py  units.py
backend/app/schemas/: __init__.py  auth.py  common.py  import_record.py  location.py  sale.py  shipment.py  transfer.py  unit.py  unit_event.py  user.py
backend/app/services/: auth.py  auth_service.py  email.py  import_excel.py  import_parser.py  location_service.py  model_equivalence_service.py  report.py  sale.py  transfer.py  transfer_service.py  unit.py  unit_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_migration.py  002_add_model_equivalences.py  003_add_batch_metadata.py  1488dad4409f_update_schema_to_match_current_models.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_auth_service.py  test_edge_cases.py  test_email.py  test_import_parser.py  test_imports.py  test_location_repository.py  test_location_service.py  test_locations.py  test_main.py  test_model_equivalences.py  test_report_service.py  test_reports.py  test_sample_regression.py  test_transfer_repository.py  test_transfer_service.py  test_transfers.py  test_unit_repository.py  test_unit_service.py  test_units.py  test_user_repository.py  test_user_service.py  test_users.py
backend/tests/core/: config.py  deps.py  security.py
backend/tests/db/: __init__.py  session.py
(+95 files in other folders)
